# jUtils

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml
src/: commands.rs  config.rs  database.rs  error.rs  events.rs  guild_config.jsonc  main.rs  send.rs  types.rs  utils.rs
src/commands/: about.rs  guild_config.rs  internal.rs  leveling.rs  moderation.rs  ping.rs  server_qol.rs  utils.rs
src/commands/guild_config/: config.rs  config_to.rs  permissions.rs
src/commands/internal/: ee.rs  init_leveling_test.rs  send_to_bots_behalf.rs  test.rs
src/commands/leveling/: leaderboard.rs  rank.rs
src/commands/moderation/: ban.rs  kick.rs  list_warns.rs  timeout.rs  warn.rs  warnings.rs
src/commands/moderation/warnings/: list_warns.rs  warn.rs
src/commands/server_qol/: massedit_channel.rs
src/commands/utils/: crates.rs  github.rs  help.rs  info_discord.rs  npm.rs  nuget.rs  ping.rs  pypi.rs  timezone.rs
src/commands/utils/info_discord/: guild.rs  invite.rs  user.rs
src/database/: database.rs  guild_config.rs  leveling.rs  timezones.rs  warns.rs
src/utils/: command_utils.rs  embed_utils.rs  leveling.rs  number_utils.rs  time_utils.rs  utils.rs
src/utils/leveling/: animation_utils.rs  anti_spam.rs  dynamic_image_utils.rs  event_handler.rs  generate_image.rs
src/utils/leveling/fonts/: README.md
