[package]
name = "jutils"
version = "0.1.0"
edition = "2021"
authors = ["jbcarreon123 <jbcarreon212@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
rand = "0.8.5"
tracing-log = "0.2.0"
duration-string = "0.3.0"
chrono = "0.4.34"
mongod = "0.3.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
