[package]
name = "jutils"
version = "2.0.0-alpha.27"
edition = "2021"
authors = ["jbcarreon123 <jbcarreon212@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.1", features = ["default", "unstable_discord_api"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
rand = "0.8.5"
tracing-log = "0.2.0"
duration-string = "0.3.0"
chrono = "0.4.34"
mongod = "0.3.3"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde_json = "1.0.114"
once_cell = "1.19.0"
bson = "2.9.0"
mongodb = { version = "2.8.1", features = ["tokio-sync"] }
itertools = "0.12.1"
regex = "1.10.3"
image = "0.25.0"
chrono-tz = "0.10.1"
imageproc = "0.25.0"
rusttype = "0.9.3"
ab_glyph = "0.2.29"
font-kit = "0.14.2"
png = "0.17.16"
rayon = "1.10.0"
